--- a/main/html/new_Design.html
+++ b/main/html/new_Design.html
@@ -34,37 +34,36 @@
   </section>
 
 <!-- / Main Text \ -->
-<section>
+<section class="section1">
+  <!--
   <img class="photo_graphiti" src="../resources/graphiti_Main.png" alt="Main_page">
   <img class="mobile_photo_graphiti" src="../resources/mobile_main_graphiti.png" alt="Main_page_phone">
-
+  -->
   <div class="Btw-text-main">
     BEST TRAINING WEEK
   </div>
   
-  <div class="telegram_button">
-    <a>Telegram-бот</a>
+  <div class="info-block">
+    <div class="telegram_button">
+      <a>Telegram-бот</a>
+    </div>
+  
+    <div class="when-and-where">
+      <a><img class="when-and-where_img" src="../resources/calendar 1.png" alt="time">15-19 вересня</a>
+      <a><img class="when-and-where_img" src="../resources/marker 1.png" alt="place">НУ “ЛП”</a>
+    </div>
   </div>
-
-<div class="when-and-where">
-  <a><img class="when-and-where_img" src="../resources/marker 1.png" alt="time">15-19 вересня</a>
-  <a><img class="when-and-where_img" src="../resources/calendar 1.png" alt="time">НУ “ЛП”</a>
-</div>
-
 </section>
-
+<section class="section2">
 <!-- Section3 -->
 <section class="section3">
 
-<!-- 
 
- <picture>
-    <source srcset="../resources/Union_big.png" media="(max-width: 860px)">
-    
-    <source class="pc_gradient_dr" src="../resources/Gradient_infp_Pc.png" alt="Section3">
-  </picture>
 
- -->
+ 
+  
+
+ 
 
 
   <div class="poles">
@@ -110,7 +109,7 @@
       </div>
     </div>
   </section>
-
+</section>
 </section>
 
 <!-- Section4 
@@ -262,7 +261,6 @@
 <section class="section5">
   <!-- Банер з текстом поверх першої картинки -->
   <div class="prizes-banner">
-    <img src="../resources/розіграш.png" alt="Розіграші" class="prizes-img">
 
     <div class="prizes-card">
       <h2 class="prizes-title">Розіграші</h2>
@@ -450,7 +448,7 @@
             </div>
               <div class="socials">
                 <a href=" https://instagram.com/ravenspelll/"><img src="../resources/instagram.png" alt="Instagram"></a>
-                <a href=""><img src="../resources/Linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.linkedin.com/in/%D0%BE%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80-%D1%81%D0%BE%D0%B1%D0%BE%D0%BB%D1%8C-655463378/"><img src="../resources/Linkedin.png" alt="Linkedin"></a>
               </div>
           </div>
         </div>
@@ -627,24 +625,26 @@
  
 </section>
 <section class="section9">
-  <div class="footer-container">
-    
-    <div class="footer-left">
-      <h1 class="yearOfBTW">2025</h1>
-      <img class="logobtwithtext" src="../resources/logoBtwWithText.png" alt="logo">
-    </div>
-
-    <div class="footer-right">
-      <h1 class="seeYouOnBTW">До зустрічі на <br> BTW!</h1>
-      <div class="socials-footer">
-        <a href="#"><img class="iconka" src="../resources/instagram.png" alt="Instagram"></a>
-        <a href="#"><img class="iconka" src="../resources/telegram 1.png" alt="Telegram"></a>
-        <a href="#"><img class="iconka" src="../resources/facebook.png" alt="Facebook"></a>
-        <a href="#"><img class="iconka" src="../resources/Linkedin.png" alt="Linkedin"></a>
-        <a href="#"><img class="iconka" src="../resources/TikTok.png" alt="TikTok"></a>
+  <div class="footer-wrap">
+    <div class="footer-container">
+      <div class="footer-left-top">
+        <img class="logobtwithtext" src="../resources/logoBtwWithText.png" alt="logo">
       </div>
-    </div>
 
+      <h1 class="seeYouOnBTW">До зустрічі на <br> BTW!</h1>
+
+      <div class="footer-left-bottom">
+        <h2 class="yearOfBTW">2025</h2>
+      </div>
+
+      <nav class="socials-footer">
+        <a href="#" class="soc"><img src="../resources/instagram.png" alt="Instagram"></a>
+        <a href="#" class="soc"><img src="../resources/telegram 1.png" alt="Telegram"></a>
+        <a href="#" class="soc"><img src="../resources/facebook.png" alt="Facebook"></a>
+        <a href="#" class="soc"><img src="../resources/Linkedin.png" alt="Linkedin"></a>
+        <a href="#" class="soc"><img src="../resources/TikTok.png" alt="TikTok"></a>
+      </nav>
+    </div>
   </div>
 </section>
 <script src="../javaScript/reviews.js" defer></script>
